Added Pods and window animation

--- a/CarChat/CarChat/Auth.storyboard
+++ b/CarChat/CarChat/Auth.storyboard
@@ -46,6 +46,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ta3-U7-QSJ">
                                 <rect key="frame" x="164" y="433.5" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="signInAction:" destination="5me-f0-Psg" eventType="touchUpInside" id="jb7-Y8-DfM"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
